force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/CampoConciliavelSIGOmni__mdt.object-meta.xml
<CustomObject>
    <description>Metadados de quais campos serão atualizados no voe omni a partir de entrada pelo objeto que faz integração com o SigTrip.</description>
    <label>Campo Conciliável SIGOmni</label>
    <pluralLabel>Campos Conciliáveis SIGOmni</pluralLabel>
</CustomObject>