force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para identificar se a configuração do campo a conciliar está ativa ou não.</description>
    <inlineHelpText>Flag para identificar se a configuração do campo a conciliar está ativa ou não.</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>