force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/AtualizarAutomaticamente__c.field-meta.xml
<CustomField>
    <fullName>AtualizarAutomaticamente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso marcado a atualização do campo será realizada de maneira automática</description>
    <inlineHelpText>Caso marcado a atualização do campo será realizada de maneira automática</inlineHelpText>
    <label>Atualizar Automaticamente</label>
    <type>Checkbox</type>
</CustomField>