force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/CampoBackup__c.field-meta.xml
<CustomField>
    <fullName>CampoBackup__c</fullName>
    <description>Nome do campo VoeOmni para receber os dados como backup, antes da atualização com os dados do SigTrip.</description>
    <inlineHelpText>Nome do campo VoeOmni para receber os dados como backup, antes da atualização com os dados do SigTrip.</inlineHelpText>
    <label>Campo Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>