force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/CampoCopiaSIGOmni__c.field-meta.xml
<CustomField>
    <fullName>CampoCopiaSIGOmni__c</fullName>
    <description>Campo que armazena o campo do Objeto SIG automaticamente no Objeto Omni.</description>
    <inlineHelpText>Campo que armazena o campo do Objeto SIG automaticamente no Objeto Omni.</inlineHelpText>
    <label>CampoCopiaSIGOmni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>