force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/CampoSigTrip__c.field-meta.xml
<CustomField>
    <fullName>CampoSigTrip__c</fullName>
    <description>Nome do campo SigTrip para o input dos dados.</description>
    <inlineHelpText>Nome do campo SigTrip para o input dos dados.</inlineHelpText>
    <label>Campo SigTrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>