force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/CampoVoeOmni__c.field-meta.xml
<CustomField>
    <fullName>CampoVoeOmni__c</fullName>
    <description>Nome do campo VoeOmni para receber os dados.</description>
    <inlineHelpText>Nome do campo VoeOmni para receber os dados.</inlineHelpText>
    <label>Campo VoeOmni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>