force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/ObjetoSigtrip__c.field-meta.xml
<CustomField>
    <fullName>ObjetoSigtrip__c</fullName>
    <description>Nome do Objeto SigTrip para o input dos dados.</description>
    <inlineHelpText>Nome do Objeto SigTrip para o input dos dados.</inlineHelpText>
    <label>Objeto Sigtrip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>