force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/ObjetoVoeOmni__c.field-meta.xml
<CustomField>
    <fullName>ObjetoVoeOmni__c</fullName>
    <description>Nome do objeto VoeOmni para receber os dados.</description>
    <inlineHelpText>Nome do objeto VoeOmni para receber os dados.</inlineHelpText>
    <label>Objeto VoeOmni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>