force-app/main/default/objects/CampoConciliavelSIGOmni__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo do campo que está sendo atualizado.</description>
    <inlineHelpText>Tipo do campo que está sendo atualizado.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Datetime</fullName>
                <default>true</default>
                <label>Datetime</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>